Обновление ветки СБ в рнд + возможность крепить оружие (#286)
* Belt and rigs weapon attachment

* parent fix

* Tech and lathe changes

* ftl changes

* Circuit for hos

* 6 > 5

* storage manager momente

* :skull:

* :skull: :skull:

* :scream_cat:

* Locale

---------

Co-authored-by: MilenVolf <milen.volf@gmail.com>

--- a/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
+++ b/Resources/Prototypes/Catalog/Fills/Lockers/heads.yml
@@ -272,6 +272,7 @@
       - id: JetpackSecurityFilled
       - id: BoxEncryptionKeySecurity
       - id: WeaponTechFabCircuitboard
+      - id: AmmoTechFabCircuitboard
       - id: HoloprojectorSecurity
       - id: BookSecretDocuments
       - id: WeaponLaserHos
@@ -296,6 +297,7 @@
       - id: SecurityTechFabCircuitboard
       - id: BoxEncryptionKeySecurity
       - id: WeaponTechFabCircuitboard
+      - id: AmmoTechFabCircuitboard
       - id: HoloprojectorSecurity
       - id: BookSecretDocuments
       - id: WeaponLaserHos
