--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -570,84 +570,42 @@
       - ForensicPad
       - ClothingEyesGlassesSecurity
       - RiotShield
-      - ShellShotgun
-      - ShellShotgunFlare
-      - ShellTranquilizer
-      - MagazinePistol
-      - MagazinePistolSubMachineGun
-      - MagazinePistolSubMachineGunTopMounted
-      - MagazineRifle
-      - MagazineLightRifle
-      - MagazineBoxPistol
-      - MagazineBoxPistolUranium
-      - MagazineShotgunSaiga
-      - MagazineUniversalShortHv
-      - MagazineUniversal
-      - SpeedLoaderUniversal
-      - MagazineBoxMagnum
-      - MagazineBoxRifle
-      - MagazineBoxLightRifle
-      - SpeedLoaderMagnum
       - TargetHuman
       - TargetSyndicate
       - TargetClown
-
+      - MagazinePistolPractice  
+      - MagazinePistolSubMachineGunPractice
+      - MagazineVectorPistolSmallPractice
+      - MagazineRiflePractice
+      - MagazineVectorRifleSmallPractice
+      - SpeedLoaderMagnumPractice
+      - MagazineBoxPistolPractice
+      - MagazineBoxRiflePractice
+      - MagazineBoxMagnumPractice
+      - BoxShotgunPractice
+      - ShellShotgunPractice
     dynamicRecipes:
-      # Magazines
-      - CartridgePistolRubber
-      - CartridgeMagnumRubber
-      - ShellShotgunBeanbag
-      - CartridgeRifleRubber
-      - CartridgeLightRifleRubber
-      - MagazineBoxPistolRubber
-      - MagazineBoxMagnumRubber
-      - MagazineBoxRifleRubber
-      - MagazineBoxLightRifleRubber
-      - ShellShotgunIncendiary
-      - CartridgePistolIncendiary
-      - CartridgeMagnumIncendiary
-      - CartridgeLightRifleIncendiary
-      - CartridgeMagnumIncendiary
-      - CartridgePistolIncendiary
-      - CartridgeRifleIncendiary
-      - CartridgeLightRifleRubber
-      - CartridgeMagnumRubber
-      - CartridgePistolRubber
-      - CartridgeRifleRubber
       - ExplosivePayload
       - FlashPayload
       - HoloprojectorSecurity
-      - MagazineBoxLightRifleIncendiary
-      - MagazineBoxMagnumIncendiary
-      - MagazineBoxPistolIncendiary
-      - MagazineBoxRifleIncendiary
-      - MagazineBoxLightRiflePractice
-      - MagazineBoxMagnumPractice
-      - MagazineBoxPistolPractice
-      - MagazineBoxRiflePractice
-      - MagazineBoxLightRifleRubber
-      - MagazineBoxMagnumRubber
-      - MagazineBoxPistolRubber
-      - MagazineBoxRifleRubber
-      - ShellShotgunBeanbag
-      - ShellShotgunIncendiary
-      - ShellShotgunPractice
       - Signaller
       - SignalTrigger
       - TelescopicShield
       - TimerTrigger
       - Truncheon
       - VoiceTrigger
-      - WeaponAdvancedLaser
-      - WeaponDisablerPractice
-      - WeaponLaserCannon
-      - WeaponLaserCarbine
-      - WeaponLaserCarbinePractice
-      - WeaponTaser
-      - WeaponXrayCannon
       - BowCompound
       - ArrowCompound
       - ClothingBeltQuiverComposit
+      - ClothingHeadHelmetRiot
+      - ClothingHeadHelmetBasic
+      - ClothingHeadHelmetSwat
+      - ClothingOuterArmorRiot
+      - ClothingOuterArmorBasicSlim
+      - ClothingOuterArmorBasic
+      - ClothingOuterArmorBulletproof
+      - ClothingBeltSecurityWebbing
+      - ClothingBeltSecurity
   - type: MaterialStorage
     whitelist:
       tags:
@@ -687,30 +645,22 @@
     runningState: icon
     staticRecipes:
       - WeaponDisablerPractice
-      - MagazinePistolRubber
-      - SpeedLoaderMagnumRubber
-      - MagazineLightRifleRubber
-      - MagazineRifleRubber
-      - MagazineMagnumSubMachineGunRubber
     dynamicRecipes:
-      # Magazines
-      - MagazinePistol
-      - SpeedLoaderMagnum
-      - MagazineLightRifle
-      - MagazineRifle
-      - MagazineMagnumSubMachineGun
-      - MagazinePistolSubMachineGunTopMounted
       # Weapons kinetic
-      - WeaponRevolverInspector
-      - WeaponSubMachineGunWt550
-      - WeaponRifleLecter
-      - WeaponShotgunDoubleBarreled
       - WeaponPistolMk58
-      - WeaponSubMachineGunVector
-      # Weapons energy
-      - WeaponDisabler
-      - WeaponLaserCarbine
+      - WeaponPistolMk68
+      - WeaponRevolverInspector
+      - WeaponLaserGun
       - WeaponAdvancedLaser
+      - WeaponSubMachineGunWt550
+      - WeaponSubMachineGunVector
+      - WeaponSubMachineGunDrozd
+      - WeaponRifleLecter
+      - WeaponLaserCarbine
+      - WeaponLaserCannon
+      - WeaponXrayCannon
+      - WeaponShotgunKammerer
+      - WeaponShotgunEnforcer
   - type: MaterialStorage
     whitelist:
       tags:
@@ -726,6 +676,8 @@
   name: ammo techfab
   description: Prints the bare minimum of bullets that any budget military or armory could need. Nothing fancy.
   components:
+    - type: AccessReader
+      access: [["Armory"]]
     - type: Sprite
       sprite: Structures/Machines/techfab.rsi
       layers:
@@ -744,25 +696,60 @@
     - type: Lathe
       idleState: icon
       runningState: icon
-      staticRecipes:
-        - CartridgePistol
-        - CartridgePistolUranium
-        - CartridgeMagnum
-        - ShellShotgun
-        - ShellShotgunFlare
-        - ShellTranquilizer
-        - CartridgeLightRifle
-        - CartridgeRifle
+      dynamicRecipes:
+        # Weapons kinetic
+        - MagazinePistol
+        - MagazinePistolRubber
+        - MagazinePistolHighCapacity
+        - MagazinePistolHighCapacityRubber
+        - MagazineVectorPistolSmall
+        - MagazineVectorPistolSmallRubber
+        - MagazineVectorPistol
+        - MagazineVectorPistolRubber
+        - MagazinePistolSubMachineGun
+        - MagazinePistolSubMachineGunRubber
+        - MagazinePistolSubMachineGunTopMounted
+        - MagazineVectorRifle    
+        - MagazineVectorRifleRubber            
+        - MagazineRifle
+        - MagazineRifleRubber
+        - MagazineRifleExt
+        - MagazineRifleExtRubber
+        - MagazineUniversalShort
+        - MagazineUniversal
+        - SpeedLoaderMagnum
+        - SpeedLoaderUniversal
+        - MagazineShotgunSaiga
         - MagazineBoxPistol
-        - MagazineBoxMagnum
+        - MagazineBoxPistolIncendiary
+        - MagazineBoxPistolRubber
         - MagazineBoxRifle
-        - MagazineBoxLightRifle
-        - MagazineBoxUniversalVPS
+        - MagazineBoxRifleBig
+        - MagazineBoxRifleIncendiary
+        - MagazineBoxRifleRubber
         - MagazineBoxUniversalPT1
+        - MagazineBoxUniversalVPS
+        - MagazineBoxMagnum
+        - BoxLethalshot
+        - BoxShotgunIncendiary
+        - BoxBeanbag        
+        - BoxShotgunSlug
+        - BoxShellTranquilizer
+        - CartridgePistol
+        - CartridgePistolRubber        
+        - CartridgeRifle
+        - CartridgeRifleRubber
+        - CartridgeCaselessUniversalPT1
+        - CartridgeMagnum
+        - CartridgeMagnumRubber
+        - ShellShotgun
+        - ShellShotgunBeanbag
     - type: MaterialStorage
       whitelist:
         tags:
           - Sheet
+          - RawMaterial
+          - Ingot
 
 - type: entity
   id: MedicalTechFab
