--- a/Resources/Prototypes/Roles/Jobs/Engineering/technical_assistant.yml
+++ b/Resources/Prototypes/Roles/Jobs/Engineering/technical_assistant.yml
@@ -5,6 +5,9 @@
   playTimeTracker: JobTechnicalAssistant
   requirements:
     - !type:DepartmentTimeRequirement
+      department: Civilian
+      time: 3600 #1 hour (Anti-raid system?)
+    - !type:DepartmentTimeRequirement
       department: Engineering
       time: 54000 #15 hrs
       inverted: true # stop playing intern if you're good at engineering!
