Больше рас для наказаний (#280)

--- a/Resources/Prototypes/Polymorphs/admin.yml
+++ b/Resources/Prototypes/Polymorphs/admin.yml
@@ -8,6 +8,24 @@
   allowRepeatedMorphs: true
 
 - type: polymorph
+  id: AdminFelinidSmite
+  entity: MobFelinid
+  forced: true
+  transferName: true
+  transferHumanoidAppearance: true
+  inventory: Transfer
+  allowRepeatedMorphs: true
+
+- type: polymorph
+  id: AdminMothSmite
+  entity: MobMoth
+  forced: true
+  transferName: true
+  transferHumanoidAppearance: true
+  inventory: Transfer
+  allowRepeatedMorphs: true
+
+- type: polymorph
   id: AdminMonkeySmite
   entity: MobMonkey
   forced: true
